# scripts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  app.py  config.yaml  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
scripts/: README.md  generate_stats.py  prune_duplicates.py  query_manifest.py  search_archive.py
src/: README.md  access_analysis.py  ai_analyzer.py  backup_manager.py  config_utils.py  content_extractor.py  database_manager.py  discover_files.py  filters.py  logging_utils.py  manifest_utils.py  nsfw_classifier.py  prompts.py  schema.py  task_utils.py  task_versions.py  text_utils.py
src/file_catalog/: README.md  __init__.py  __main__.py
tests/: test_access_analysis.py  test_ai_analyzer.py  test_ai_analyzer_passwords.py  test_ai_estate_analysis.py  test_app.py  test_backup_manager.py  test_cli.py  test_content_extractor.py  test_database_manager.py  test_discover_files.py  test_logging_utils.py  test_main_filtering.py  test_main_versions.py  test_main_workers.py  test_manifest_utils.py  test_nsfw_classifier_extended.py  test_query_manifest.py  test_schema.py  test_task_utils.py  test_text_utils.py
